# parking-lot-update

./: .gitignore  CMakeLists.txt  README.md  a.out  main  main.c
docs/: plan.md
util/: utils.c  utils.h
util/crud/read/: read.c  read.h
util/file_handler/: file_handler  file_handler.c  file_handler.h
util/general/: general.h
util/get/: get.c  get.h
util/put/: put.c  put.h
util/read/: read.c  read.h
util/ui/: ui.c  ui.h
vehicle/: vehicle.c  vehicle.h
vehicle/read/: read.c  read.h
vehicle/user_input/: user_input.c  user_input.h
worker/: worker.c  worker.h
